Bugzilla bug 232742: added Linux/amd64 support.  The patch came from Gentoo Linux's portage and was sent by Henrik Lynggaard Hansen <admin@mozillatranslator.org>.  r=wtc. Modified Files: configure configure.in prprf.c _linux.cfg linux.h Added Files: os_Linux_x86_64.s