nsprpub/pr/src/io/prprf.c
@@ -51,7 +51,9 @@
 ** Note: on some platforms va_list is defined as an array,
 ** and requires array notation.
 */
-#if (defined(LINUX) && defined(__powerpc__)) || \
+#if (defined(LINUX) && defined(__x86_64__))
+#define VARARGS_ASSIGN(foo, bar) __va_copy((foo), (bar))
+#elif (defined(LINUX) && defined(__powerpc__)) || \
     (defined(LINUX) && defined(__s390__)) || \
     (defined(LINUX) && defined(__s390x__)) || \
     defined(WIN16) || defined(QNX) || \
